# tftp

./: .gitignore  CMakeLists.txt  README.md  debugClient.py  debugWRQClient.py  main.cpp  sample.txt  temp.diff
gtest/: CMakeLists.txt  main.cpp  packetMaking.cpp
gtest/testfiles/: temp2.txt
include/: common.hpp  easylogging++.h  huffman.h  huffman.hpp  singleton.hpp  tftp_client.hpp  tftp_common.hpp  tftp_packets.hpp  tftp_server.hpp  tftp_socket.hpp  tftp_stark.hpp
src/: client_main.cpp  easylogging++.cc  huffman.cpp  huffmanfATISH.cpp  main_huffman.cpp  server_main.cpp  tftp_client.cpp  tftp_packets.cpp  tftp_server.cpp  tftp_socket.cpp  tftp_stark.cpp
